--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing Script</title>
-    <script src="./section24/rps/rps.js"></script>
+    <script src="./section21/dom-manip.js"></script>
 </head>
 <body>
     
